Fix overlapped 'Fraktal DAO' on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -431,7 +431,7 @@ h1 {
   font-size: 40px;
   color: #000000;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 100px;
 }
 
 .benefits-section p,
